buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net' }
        maven { url = 'https://maven.parchmentmc.org' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
        classpath group: 'org.parchmentmc', name: 'librarian', version: '1.+'
    }
}

apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.parchmentmc.librarian.forgegradle'

apply from: 'gradle/teacon-forge.gradle'

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

// definitions at gradle/teacon-forge.gradle
teacon {
    modId = 'xkdeco'
    modVersion = '0.3.0'
    modLicense = 'BSD-3-Clause'
    modGitHubRepo = 'teaconmc/XKDeco'
    modAuthors = ['xekr (XeKr)', 'ustc-zzzz', 'LucunJi']
    modDescription = 'XeKr\'s Decorations for Minecraft 1.18.'

    platform = 'forge-1.18.2-40.0.19'
    parchment = '2022.03.13'

    // uncomment these lines if you need
    modName = 'XeKr\'s Decorations' // default to repo name
    // modGitHubBranch = 1.18-forge // for referring the license
    // modifyMemberAccess = true // for access transformer
     useDataGeneration = true // for data generation
    // publishTask = shadowJar // for shadow jar or other usages
    // lazyTokens = ['minecraft_classpath': { project.configurations.shadow.asPath }] // for runtime tokens

    // use './gradlew -q printModMeta > src/main/resources/META-INF/mods.toml' to generate mod meta
}
